--- a/src/app/arqueo-caja/arqueo-caja-new/arqueo-caja-new.component.html
+++ b/src/app/arqueo-caja/arqueo-caja-new/arqueo-caja-new.component.html
@@ -51,7 +51,7 @@
           El monto inicial es un campo es requerido.
       </div>
     </div>
-    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+    <div *ngIf="displayCashRegisterCombo===true" class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
       <div class="row pl-2">
         <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
           <label>Caja:</label>
@@ -80,6 +80,6 @@
 <div class="col-12">
   <div class="col-7 offset-5">
     <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
-    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="(form.invalid || hasCashRegister)" (click)="validate()">{{saveButton}}</button>
+    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="(form.invalid || hasCashRegister)" (click)="saveArqueo()">{{saveButton}}</button>
   </div>
 </div>    
