--- a/src/app/cash-flows/cash-flows-edit/cash-flows-edit.component.html
+++ b/src/app/cash-flows/cash-flows-edit/cash-flows-edit.component.html
@@ -61,7 +61,7 @@
           <label>Tipo de Pago:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <label>{{ paymentTypeName }}</label>
+          <label>{{ cashFlow.paymentTypeName }}</label>
         </div>
       </div>
     </div>
