--- a/src/app/file-input/file-input.component.html
+++ b/src/app/file-input/file-input.component.html
@@ -2,10 +2,10 @@
   <div class="file-field md-form">
     <div mdbBtn color="primary" size="sm" class="waves-light" mdbWavesEffect>
       <span>Choose file</span>
-      <input type="file" (change)="onFileChange($event)" mdbFileSelect (uploadOutput)="onUploadOutput($event)" [uploadInput]="uploadInput" accept="{{allowedTypes}}">
+      <input type="file" [disabled]="disabled" (change)="onFileChange($event)" mdbFileSelect (uploadOutput)="onUploadOutput($event)" [uploadInput]="uploadInput" accept="{{allowedTypes}}">
     </div>
     <div class="file-path-wrapper">
-      <input class="file-path" type="text" placeholder="Upload your file" [value]="showFiles()">
+      <input class="file-path" type="text" placeholder="Upload your file" [value]="showFiles()" [disabled]="disabled">
     </div>
   </div>
 </form>
