--- a/src/app/client-account-transactions/transaction-list/transaction-list.component.html
+++ b/src/app/client-account-transactions/transaction-list/transaction-list.component.html
@@ -50,15 +50,15 @@
                         </thead>
                         <tbody class="table-wrapper" *ngIf='filteredTransactions && filteredTransactions.length'>
                             <tr *ngFor='let transaction of filteredTransactions; let i = index'>
-                                <td *ngIf='(transaction.deleted === false) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ transaction.clientName }}</td>
+                                <td *ngIf='(transaction.deleted === false) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ transaction.client.name }}</td>
                                 <td *ngIf='(transaction.deleted === false) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ transaction.date | date:'dd/MM/yy HH:mm'
                                     }}</td>
                                 <td *ngIf='(transaction.deleted === false) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ transaction.amount |
                                     currency:'USD':code:'2.2-2' }}</td>
                                 <td class="align-middle" *ngIf='(transaction.deleted === false) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>
-                                    <a [routerLink]="['/clients-module/accountTransactions', { outlets: { edit: ['editTransaction', transaction.clientId, transaction._id] } }]"
+                                    <a [routerLink]="['/clients-module/accountTransactions', { outlets: { edit: ['editTransaction', transaction._id] } }]"
                                         class="btn btn-yellow btn-sm customButtonText">Detalle</a>
-                                    <a (click)="showModalDelete(deleteTemplate, transaction.clientId, transaction._id)"
+                                    <a (click)="showModalDelete(deleteTemplate, transaction._id)"
                                         class="btn btn-red btn-sm">Eliminar</a>
                                 </td>
                             </tr>
