--- a/src/app/menu/menu-new/menu-new.component.html
+++ b/src/app/menu/menu-new/menu-new.component.html
@@ -10,18 +10,6 @@
 </ng-template>
 
 <!-- Form -->
-<ng-template #nameInvalid>
-  <div class="modal-header">
-    <h4 class="modal-title">Agregar Producto</h4>
-  </div>
-  <div class="modal-body">
-    Ya existe una carta con ese nombre, elija uno diferente.
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="button special" (click)="closeModal()">Ok</button>
-    <button type="button" class="button special" (click)="closeModal()">Cancelar</button>
-  </div>
-</ng-template>
 <div class="container">
   <header class="major" align="center">
     <h2>Nueva Carta</h2>
@@ -47,7 +35,7 @@
 
         <div class="12u$">
           <ul class="actions" align="center">
-            <li><input [disabled]="form.invalid || validPicture === ''" type="submit" value="Guardar" class="special" (click)="validateName()"/></li>
+            <li><input [disabled]="form.invalid || validPicture === ''" type="submit" value="Guardar" class="special" (click)="saveMenu()"/></li>
             <li><input type="button" value="Cancelar" (click)="showModalCancel(cancelTemplate)" /></li>
           </ul>
         </div>    
