--- a/src/app/payment-type/payment-type-edit/payment-type-edit.component.html
+++ b/src/app/payment-type/payment-type-edit/payment-type-edit.component.html
@@ -24,11 +24,13 @@
           <label>Nombre:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input formControlName="name" type="text" class="form-control" [class.is-invalid]="paymentTypeForm.get('name').invalid && (paymentTypeForm.get('name').dirty || paymentTypeForm.get('name').touched)"
+          <input formControlName="name" type="text" class="form-control"
+            [class.is-invalid]="paymentTypeForm.get('name').invalid && (paymentTypeForm.get('name').dirty || paymentTypeForm.get('name').touched)"
             id="name">
         </div>
       </div>
-      <div *ngIf="paymentTypeForm.get('name').invalid && (paymentTypeForm.get('name').dirty || paymentTypeForm.get('name').touched)"
+      <div
+        *ngIf="paymentTypeForm.get('name').invalid && (paymentTypeForm.get('name').dirty || paymentTypeForm.get('name').touched)"
         class="alert alert-danger">
         El nombre de la Forma de Pago es requerido.
       </div>
@@ -36,20 +38,23 @@
 
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
       <div class="row pl-2">
-        <mdb-checkbox formControlName="available" (change)="handleClickAvailable()"> {{ checkboxAvailableText }}</mdb-checkbox>
+        <mdb-checkbox formControlName="available" (change)="handleClickAvailable()"> {{ checkboxAvailableText }}
+        </mdb-checkbox>
       </div>
     </div>
 
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
       <div class="row pl-2">
-        <mdb-checkbox formControlName="default"> {{ checkboxDefaultText }}</mdb-checkbox>        
+        <mdb-checkbox formControlName="default"> {{ checkboxDefaultText }}</mdb-checkbox>
       </div>
     </div>
   </form>
 </div>
 <div class="col-12">
   <div class="col-7 offset-5">
-    <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
-    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="paymentTypeForm.invalid" (click)="updatePaymentType()">{{saveButton}}</button>
+    <button type="button" class="btn btn-sm customButtonCancel waves-light"
+      (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
+    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="paymentTypeForm.invalid"
+      (click)="updatePaymentType()">{{saveButton}}</button>
   </div>
 </div>
