--- a/src/app/payment-type/payment-type-list/payment-type-list.component.html
+++ b/src/app/payment-type/payment-type-list/payment-type-list.component.html
@@ -1,6 +1,6 @@
 <ng-template #deleteTemplate>
-    <app-delete-template [modalTitle]="modalDeleteTitle" [modalMessage]="modalDeleteMessage" (delete)="deletePaymentType()"
-        (close)="closeModal()">
+    <app-delete-template [modalTitle]="modalDeleteTitle" [modalMessage]="modalDeleteMessage"
+        (delete)="deletePaymentType()" (close)="closeModal()">
     </app-delete-template>
 </ng-template>
 
@@ -18,8 +18,8 @@
                 </header>
             </div>
             <div class="float-right">
-            <a [routerLink]="['/settings/general/paymentTypes', { outlets: { edit: ['newPaymentType'] } }]" class="btn btn-primary btn-sm waves-light customButton"
-                mdbRippleRadius> + Nueva Forma de Pago</a>
+                <a [routerLink]="['/settings/general/paymentTypes', { outlets: { edit: ['newPaymentType'] } }]"
+                    class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius> + Nueva Forma de Pago</a>
             </div>
         </div>
 
@@ -36,8 +36,8 @@
                 <form #form="ngForm" novalidate class="form-inline col-md-12 col-lg-12">
                     <h6 class="pt-2">Filtrar:</h6>
                     <div class="md-form form-group mr-0 ml-0 col-md-6 col-lg-6">
-                        <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='listFilter'
-                            id="query">
+                        <input type="text" class="input-alternate" placeholder="Nombre" name="query"
+                            [(ngModel)]='listFilter' id="query">
                     </div>
                 </form>
             </div>
@@ -53,11 +53,12 @@
                     <tbody class="table-wrapper" *ngIf='paymentTypes && paymentTypes.length'>
                         <tr *ngFor='let paymentType of filteredPaymentTypes '>
                             <td>{{ paymentType.name }}</td>
-                            <td>{{ paymentType.available }}</td>
+                            <td>{{ paymentType.availableDescription }}</td>
                             <td class="align-middle">
                                 <a [routerLink]="['/settings/general/paymentTypes', { outlets: { edit: ['editPaymentType', paymentType._id] } }]"
                                     class="btn btn-yellow btn-sm customButtonText">Editar</a>
-                                <button [disabled]="paymentType.default === true" type="button" class="btn btn-red btn-sm"
+                                <button [disabled]="paymentType.default === true" type="button"
+                                    class="btn btn-red btn-sm"
                                     (click)="showModalDelete(deleteTemplate, paymentType._id)">Eliminar</button>
                             </td>
                         </tr>
