--- a/src/app/payment-type/payment-type-new/payment-type-new.component.html
+++ b/src/app/payment-type/payment-type-new/payment-type-new.component.html
@@ -8,18 +8,6 @@
   <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
   </app-error-template>
 </ng-template>
-<ng-template #nameInvalid>
-  <div class="modal-header">
-    <h4 class="modal-title">Agregar Tama&ntilde;o</h4>
-  </div>
-  <div class="modal-body">
-    Ya existe un tama&ntilde;o con ese nombre, elija uno diferente.
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="button special" (click)="closeModal()">Ok</button>
-    <button type="button" class="button special" (click)="closeModal()">Cancelar</button>
-  </div>
-</ng-template>
 <!-- Form -->
 <div class="col-12 pl-0 pr-0 formNewEditSettings">
   <div class="col-12 pr-0 outletTitle">
@@ -34,11 +22,13 @@
           <label>Nombre:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input mdbActive formControlName="name" type="text" class="form-control" [class.is-invalid]="paymentTypeForm.get('name').invalid && (paymentTypeForm.get('name').dirty || paymentTypeForm.get('name').touched)"
+          <input mdbActive formControlName="name" type="text" class="form-control"
+            [class.is-invalid]="paymentTypeForm.get('name').invalid && (paymentTypeForm.get('name').dirty || paymentTypeForm.get('name').touched)"
             id="name">
         </div>
       </div>
-      <div *ngIf="paymentTypeForm.get('name').invalid && (paymentTypeForm.get('name').dirty || paymentTypeForm.get('name').touched)"
+      <div
+        *ngIf="paymentTypeForm.get('name').invalid && (paymentTypeForm.get('name').dirty || paymentTypeForm.get('name').touched)"
         class="alert alert-danger">
         El nombre de la Forma de Pago es requerido.
       </div>
@@ -55,7 +45,9 @@
 </div>
 <div class="col-12">
   <div class="col-7 offset-5">
-    <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
-    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="paymentTypeForm.invalid" (click)="validateName()">{{saveButton}}</button>
+    <button type="button" class="btn btn-sm customButtonCancel waves-light"
+      (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
+    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="paymentTypeForm.invalid"
+      (click)="savePaymentType()">{{saveButton}}</button>
   </div>
 </div>
