--- a/src/app/product/product-modify/product-modify.component.html
+++ b/src/app/product/product-modify/product-modify.component.html
@@ -1,6 +1,6 @@
 <ng-template #cancelTemplate>
   <app-cancel-template [modalTitle]="modalCancelTitle" [modalMessage]="modalCancelMessage" (handleOkButton)="cancel()"
-      (handleCancelButton)="closeModal()">
+    (handleCancelButton)="closeModal()">
   </app-cancel-template>
 </ng-template>
 
@@ -9,117 +9,151 @@
   </app-error-template>
 </ng-template>
 
+<ng-template #priceNotMatch>
+  <app-cancel-template [modalTitle]="modalPriceNotMatchTitle" [modalMessage]="modalPriceNotMatchMessage"
+    (handleOkButton)="closeModalAndContinue()" (handleCancelButton)="closeModal()">
+  </app-cancel-template>
+</ng-template>
+
 <!-- Form -->
 <div *ngIf='product'>
   <header class="major" align="center">
     <h2>Editando: {{productNameModified}}</h2>
   </header>
-  <div>        
+
+  <div class="row mb-2 mt-2 ml-2" *ngIf="!canEdit">
+    <span class="red-label">{{ noModifyMessage }}</span>
+  </div>
+
+  <div>
     <form method="post" novalidate [formGroup]="productForm">
       <div class="row">
         <div class="col-md-6">
-          <img class="customImage" [src]="path" onerror="this.src='../../../assets/img/No_image_available.svg'"/>
+          <img class="customImage" [src]="productPictureData"
+            onerror="this.src='../../../assets/img/No_image_available.svg'" />
         </div>
         <div class="col-md-6">
           <div class="form-group">
             <label>Código:</label>
-            <input formControlName="code" type="text" class="form-control" [class.is-invalid]="productForm.get('code').invalid && (productForm.get('code').dirty || productForm.get('code').touched)" 
-                  id="code">
+            <input formControlName="code" type="text" class="form-control"
+              [class.is-invalid]="productForm.get('code').invalid && (productForm.get('code').dirty || productForm.get('code').touched)"
+              id="code">
           </div>
 
-          <div *ngIf="productForm.get('code').invalid && (productForm.get('code').dirty || productForm.get('code').touched)" class="alert alert-danger">
+          <div
+            *ngIf="productForm.get('code').invalid && (productForm.get('code').dirty || productForm.get('code').touched)"
+            class="alert alert-danger">
             El código del Producto es requerido.
           </div>
 
           <div class="form-group">
             <label>Nombre:</label>
-            <input formControlName="name" type="text" class="form-control" [class.is-invalid]="productForm.get('name').invalid && (productForm.get('name').dirty || productForm.get('name').touched)" 
-                  id="name">
+            <input formControlName="name" type="text" class="form-control"
+              [class.is-invalid]="productForm.get('name').invalid && (productForm.get('name').dirty || productForm.get('name').touched)"
+              id="name">
           </div>
 
-          <div *ngIf="productForm.get('name').invalid && (productForm.get('name').dirty || productForm.get('name').touched)" class="alert alert-danger">
+          <div
+            *ngIf="productForm.get('name').invalid && (productForm.get('name').dirty || productForm.get('name').touched)"
+            class="alert alert-danger">
             El nombre del Producto es requerido.
           </div>
 
           <div class="form-group">
-              <label>Categoría:</label>
-              <div class="select-wrapper">
-                <select formControlName="category" type="text" class="form-control" [class.is-invalid]="productForm.get('category').invalid && (productForm.get('category').dirty || productForm.get('category').touched)"
-                  id="category">
-                  <option value="default" default>Seleccione la categoría...</option>
-                  <option [value]=cat._id *ngFor = 'let cat of categories'>{{cat.name}}</option>
-                </select>
-              </div>
+            <label>Categoría:</label>
+            <div class="select-wrapper">
+              <select formControlName="category" type="text" class="form-control"
+                [class.is-invalid]="productForm.get('category').invalid && (productForm.get('category').dirty || productForm.get('category').touched)"
+                id="category">
+                <option value="default" default>Seleccione la categoría...</option>
+                <option [value]=cat._id *ngFor='let cat of categories'>{{cat.name}}</option>
+              </select>
+            </div>
           </div>
 
-          <div *ngIf="productForm.get('category').invalid && (productForm.get('category').dirty || productForm.get('category').touched)" class="alert alert-danger">
+          <div
+            *ngIf="productForm.get('category').invalid && (productForm.get('category').dirty || productForm.get('category').touched)"
+            class="alert alert-danger">
             La Categoría del producto es requerida.
-          </div>           
+          </div>
 
           <div class="form-group">
             <label>Descripción</label>
-            <textarea formControlName="description" class="form-control" [class.is-invalid]="productForm.get('description').invalid && (productForm.get('description').dirty || productForm.get('description').touched)" 
-                      id="description" rows="3" cols="20"></textarea>
+            <textarea formControlName="description" class="form-control"
+              [class.is-invalid]="productForm.get('description').invalid && (productForm.get('description').dirty || productForm.get('description').touched)"
+              id="description" rows="3" cols="20"></textarea>
           </div>
 
-          <div *ngIf="productForm.get('description').invalid && (productForm.get('description').dirty || productForm.get('description').touched)" class="alert alert-danger">
+          <div
+            *ngIf="productForm.get('description').invalid && (productForm.get('description').dirty || productForm.get('description').touched)"
+            class="alert alert-danger">
             La descripción del producto es requerida.
           </div>
 
           <div class="form-group">
             <label>Precio ($):</label>
-            <input formControlName="price" type="number" class="form-control" [class.is-invalid]="productForm.get('price').invalid && (productForm.get('price').dirty || productForm.get('price').touched)" 
-                  id="price">
+            <input formControlName="price" type="number" class="form-control"
+              [class.is-invalid]="productForm.get('price').invalid && (productForm.get('price').dirty || productForm.get('price').touched)"
+              id="price">
           </div>
 
-          <div *ngIf="productForm.get('price').invalid && (productForm.get('price').dirty || productForm.get('price').touched)" class="alert alert-danger">
+          <div
+            *ngIf="productForm.get('price').invalid && (productForm.get('price').dirty || productForm.get('price').touched)"
+            class="alert alert-danger">
             El precio del Producto es requerido.
           </div>
 
-          <app-file-input (validator)="onNotified($event)" [type]="'img'" [subtype]="'product'"></app-file-input>
+          <app-file-input (validator)="onNotified($event)" [type]="'img'" [subtype]="'product'" [disabled]="!canEdit">
+          </app-file-input>
           <div *ngIf="validPicture == false && pictureTouched == true" class="alert alert-danger">
             La imagen del producto es requerida.
-          </div>        
+          </div>
 
           <div class="form-group">
             <mdb-checkbox formControlName="available"> {{ checkboxAvailableText }}</mdb-checkbox>
           </div>
 
-        </div> 
+        </div>
       </div>
 
       <div class="row">
         <div class="col-md-6">
-          
+
           <label>Tamaños:</label>
           <div formArrayName="sizes" *ngFor="let productSize of sizes.controls; let i=index">
-            <div [formGroupName]="i" class="form-group">              
+            <div [formGroupName]="i" class="form-group">
               <div class="row">
                 <div class="select-wrapper col-md-5">
-                  <select formControlName="name" class="form-control browser-default" [class.is-invalid]="productForm.get('sizes').controls[i].controls.name.invalid && (productForm.get('sizes').controls[i].controls.name.dirty || productForm.get('sizes').controls[i].controls.name.touched)"
-                    id="{{ 'name' + i }}">
+                  <select formControlName="sizeId" class="form-control  browser-default"
+                    [class.is-invalid]="productForm.get('sizes').controls[i].controls.sizeId.invalid && (productForm.get('sizes').controls[i].controls.sizeId.dirty || productForm.get('sizes').controls[i].controls.sizeId.touched)"
+                    id="{{ 'productSize' + i }}">
                     <option value="default" default>Seleccione el tamaño...</option>
-                    <option [value]="size.name" *ngFor = 'let size of product.sizes; let i=index'>{{size.name}}</option>
+                    <option [value]="size._id" *ngFor='let size of sizesArray'>{{size.name}}</option>
                   </select>
-
-                  <div *ngIf="productForm.get('sizes').controls[i].controls.name.invalid && (productForm.get('sizes').controls[i].controls.name.dirty || productForm.get('sizes').controls[i].controls.name.touched)" class="alert alert-danger">
+                  <div
+                    *ngIf="productForm.get('sizes').controls[i].controls.sizeId.invalid && (productForm.get('sizes').controls[i].controls.sizeId.dirty || productForm.get('sizes').controls[i].controls.sizeId.touched)"
+                    class="alert alert-danger">
                     El tamaño es requerido.
-                  </div>  
+                  </div>
                 </div>
                 <div class="col-md-3 col-md-offset-1">
-                  <input formControlName="price" class="form-control" type="number" placeholder="Precio ($)" [class.is-invalid]="productForm.get('sizes').controls[i].controls.price.invalid && (productForm.get('sizes').controls[i].controls.price.dirty || productForm.get('sizes').controls[i].controls.price.touched)"
-                    id="{{ 'price' + i }}">
+                  <input formControlName="price" type="number" placeholder="Precio($)" class="form-control"
+                    [class.is-invalid]="productForm.get('sizes').controls[i].controls.price.invalid && (productForm.get('sizes').controls[i].controls.price.dirty || productForm.get('sizes').controls[i].controls.price.touched)"
+                    id="{{ 'productSizePrice' + i }}">
 
-                    <div *ngIf="productForm.get('sizes').controls[i].controls.price.invalid && (productForm.get('sizes').controls[i].controls.price.dirty || productForm.get('sizes').controls[i].controls.price.touched)" class="alert alert-danger">
-                      El precio es requerido
-                    </div>
+                  <div
+                    *ngIf="productForm.get('sizes').controls[i].controls.price.invalid && (productForm.get('sizes').controls[i].controls.price.dirty || productForm.get('sizes').controls[i].controls.price.touched)"
+                    class="alert alert-danger">
+                    El precio es requerido
+                  </div>
                 </div>
                 <div class="col-md-3 col-md-offset-1">
                   <div class="form-check">
-                    <input formControlName="default" type="radio" class="form-check-input form-control" (change)="setDefaultSize(i)" name="default"  id="{{ 'default' + i }}" [value]="true">
+                    <input formControlName="default" type="radio" class="form-check-input form-control"
+                      (change)="setDefaultSize(i)" name="default" id="{{ 'default' + i }}" [value]="true">
                     <label class="form-check-label" for="{{ 'default' + i }}">Default</label>
                   </div>
-                </div>                
+                </div>
               </div>
             </div>
             <button class="col-md-1" no-margin color="danger" (click)="removeSize(i)">X</button>
@@ -135,23 +169,29 @@
 
           <label>Opciones:</label>
           <div formArrayName="options" *ngFor="let productOption of options.controls; let i=index">
-            <div [formGroupName]="i" class="form-group">              
+            <div [formGroupName]="i" class="form-group">
               <div class="row">
                 <div class="col-md-5">
-                  <input formControlName="name" type="text" placeholder="Opción" [class.is-invalid]="productForm.get('options').controls[i].controls.name.invalid && (productForm.get('options').controls[i].controls.name.dirty || productForm.get('options').controls[i].controls.name.touched)"
+                  <input formControlName="name" type="text" placeholder="Opción"
+                    [class.is-invalid]="productForm.get('options').controls[i].controls.name.invalid && (productForm.get('options').controls[i].controls.name.dirty || productForm.get('options').controls[i].controls.name.touched)"
                     id="{{ 'name' + i }}">
 
-                  <div *ngIf="productForm.get('options').controls[i].controls.name.invalid && (productForm.get('options').controls[i].controls.name.dirty || productForm.get('options').controls[i].controls.name.touched)" class="alert alert-danger">
+                  <div
+                    *ngIf="productForm.get('options').controls[i].controls.name.invalid && (productForm.get('options').controls[i].controls.name.dirty || productForm.get('options').controls[i].controls.name.touched)"
+                    class="alert alert-danger">
                     La opción es requerida.
-                  </div> 
+                  </div>
                 </div>
                 <div class="col-md-3 col-md-offset-1">
-                  <input formControlName="price" class="form-control" type="number" placeholder="Precio ($)" [class.is-invalid]="productForm.get('options').controls[i].controls.price.invalid && (productForm.get('options').controls[i].controls.price.dirty || productForm.get('options').controls[i].controls.price.touched)"                  
+                  <input formControlName="price" class="form-control" type="number" placeholder="Precio ($)"
+                    [class.is-invalid]="productForm.get('options').controls[i].controls.price.invalid && (productForm.get('options').controls[i].controls.price.dirty || productForm.get('options').controls[i].controls.price.touched)"
                     id="{{ 'price' + i }}">
 
-                    <div *ngIf="productForm.get('options').controls[i].controls.price.invalid && (productForm.get('options').controls[i].controls.price.dirty || productForm.get('options').controls[i].controls.price.touched)" class="alert alert-danger">
-                      El precio es requerido
-                    </div>
+                  <div
+                    *ngIf="productForm.get('options').controls[i].controls.price.invalid && (productForm.get('options').controls[i].controls.price.dirty || productForm.get('options').controls[i].controls.price.touched)"
+                    class="alert alert-danger">
+                    El precio es requerido
+                  </div>
                 </div>
               </div>
             </div>
@@ -170,12 +210,13 @@
       <div class="row">
         <div class="12u$">
           <ul class="actions" align="right">
-            <li><input [disabled]="productForm.invalid" type="submit" value="Aceptar" class="special" (click)="updateProduct()"/></li>
+            <li><input [disabled]="productForm.invalid" type="submit" value="Aceptar" class="special"
+                (click)="updateProduct()" /></li>
             <li><input (click)="showModalCancel(cancelTemplate)" type="button" value="Cancel" /></li>
           </ul>
-        </div> 
-      </div>    
+        </div>
+      </div>
     </form>
-       
+
   </div>
 </div>
