--- a/src/app/section/section-list/section-list.component.html
+++ b/src/app/section/section-list/section-list.component.html
@@ -34,9 +34,9 @@
   </div>
   <div class="col-md-4 col-lg-4 col-sm-4 center-pills mr-0 ml-0 pr-4 pl-0">
     <div class="float-right">
-      <span class="badge badge-pill green">Libre</span>
-      <span class="badge badge-pill red ">Ocupada</span>
-      <span class="badge badge-pill blue">Reservada</span>
+      <span class="badge badge-pill green">{{ statusLibre }}</span>
+      <span class="badge badge-pill red ">{{ statusOcupada }}</span>
+      <span class="badge badge-pill blue">{{ statusReservada }}</span>
     </div>
   </div>
 </div>
