Refactorin size module

--- a/src/app/size/size-edit/size-edit.component.html
+++ b/src/app/size/size-edit/size-edit.component.html
@@ -23,11 +23,13 @@
           <label>Nombre:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input formControlName="name" type="text" class="form-control" [class.is-invalid]="sizeForm.get('name').invalid && (sizeForm.get('name').dirty || sizeForm.get('name').touched)"
+          <input formControlName="name" type="text" class="form-control"
+            [class.is-invalid]="sizeForm.get('name').invalid && (sizeForm.get('name').dirty || sizeForm.get('name').touched)"
             id="name">
         </div>
       </div>
-      <div *ngIf="sizeForm.get('name').invalid && (sizeForm.get('name').dirty || sizeForm.get('name').touched)" class="alert alert-danger">
+      <div *ngIf="sizeForm.get('name').invalid && (sizeForm.get('name').dirty || sizeForm.get('name').touched)"
+        class="alert alert-danger">
         El nombre del Tamaño es requerido.
       </div>
     </div>
@@ -41,7 +43,9 @@
 </div>
 <div class="col-12">
   <div class="col-7 offset-5">
-    <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
-    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="sizeForm.invalid" (click)="updateSize()">{{saveButton}}</button>
+    <button type="button" class="btn btn-sm customButtonCancel waves-light"
+      (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
+    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="sizeForm.invalid"
+      (click)="updateSize()">{{saveButton}}</button>
   </div>
 </div>
