--- a/src/app/size/size-list/size-list.component.html
+++ b/src/app/size/size-list/size-list.component.html
@@ -18,8 +18,8 @@
                 </header>
             </div>
             <div class="float-right">
-                <a [routerLink]="['/settings/general/sizes', { outlets: { edit: ['newSize'] } }]" class="btn btn-primary btn-sm waves-light customButton"
-                    mdbRippleRadius>
+                <a [routerLink]="['/settings/general/sizes', { outlets: { edit: ['newSize'] } }]"
+                    class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius>
                     + Nuevo Tamaño
                 </a>
             </div>
@@ -30,8 +30,8 @@
                     <form #form="ngForm" novalidate class="form-inline col-md-12 col-lg-12">
                         <h6 class="pt-2">Filtrar:</h6>
                         <div class="md-form form-group mr-0 ml-0 col-md-3 col-lg-3">
-                            <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='listFilter'
-                                id="query">
+                            <input type="text" class="input-alternate" placeholder="Nombre" name="query"
+                                [(ngModel)]='listFilter' id="query">
                         </div>
                     </form>
                 </div>
@@ -47,11 +47,12 @@
                         <tbody class="table-wrapper" *ngIf='sizes && sizes.length'>
                             <tr *ngFor='let size of filteredSizes '>
                                 <td>{{ size.name }}</td>
-                                <td>{{ size.available }}</td>
+                                <td>{{ size.availableDescription }}</td>
                                 <td class="align-middle">
                                     <a [routerLink]="['/settings/general/sizes', { outlets: { edit: ['editSize', size._id] } }]"
                                         class="btn btn-yellow btn-sm customButtonText">Editar</a>
-                                    <a (click)="showModalDelete(deleteTemplate, size._id)" class="btn btn-red btn-sm">Eliminar</a>
+                                    <a (click)="showModalDelete(deleteTemplate, size._id)"
+                                        class="btn btn-red btn-sm">Eliminar</a>
                                 </td>
                             </tr>
                         </tbody>
